--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -158,8 +158,8 @@
       
       <h1>Follow Us</h1>
       <div class="btn-group">
-       <a class="btn btn-twitter btn-lg" href="https://twitter.com/solcreationro"><i class="icon-twitter icon-large"></i> Twitter</a>
-     <a class="btn btn-facebook btn-lg" href="https://www.facebook.com/solcreation.ro/"><i class="icon-facebook icon-large"></i> Facebook</a>
+       <a class="btn btn-twitter btn-lg" href="#"><i class="icon-twitter icon-large"></i> Twitter</a>
+     <a class="btn btn-facebook btn-lg" href="#"><i class="icon-facebook icon-large"></i> Facebook</a>
      <a class="btn btn-google-plus btn-lg" href="#"><i class="icon-google-plus icon-large"></i> Google+</a>
       </div>
       
@@ -184,7 +184,7 @@
         
       </div>
       <div class="col-sm-6">
-          <p class="pull-right">Built with Node.js and MongoDB<i class="icon-heart-empty"></i> by Solcreation</p>     
+          <p class="pull-right">Built with Node.js and MongoDB<i class="icon-heart-empty"></i> by EC</p>     
       </div>
     </div>
   </div>
