--- a/src/views/colListView.ejs
+++ b/src/views/colListView.ejs
@@ -72,6 +72,7 @@
         </div>
         <div class="col-md-5">
           <div class="well well-lg">
+            <h2>Please select a college to view their social media accounts!</h2>
             <div class="row">
               <div class="col-sm-12">
 
@@ -136,7 +137,7 @@
             <!--/stories-->
 
 
-            <a href="/" class="btn btn-primary pull-right btnNext">More <i class="glyphicon glyphicon-chevron-right"></i></a>
+            
 
 
           </div>
@@ -184,7 +185,6 @@
 
         </div>
         <div class="col-sm-6">
-          <p class="pull-right">Built with <i class="icon-heart-empty"></i> at <a href="http://www.bootply.com">Bootply</a></p>
         </div>
       </div>
     </div>
